--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
+    stdin_open: true
+    tty: true
 
   cpu_monitor:
     build:
